Version 2.8.0

  Bugfixes:
  - Throw an error if "ctid" or other system columns are used in the WHERE
    clause.  Since these columns have no meaning in Oracle, they are assigned
    meaningless values, and using them in WHERE conditions would lead to
    meaningless results.
    Reported in https://stackoverflow.com/q/78823195/6464308

  Enhancements:
  - Raise the limit for "prefetch" to 10240 again, like it was before
    version 2.6.0.  Requested by Martin Nash, "AmebaBrain" and others.
    Note that high values increase the risk of out-of-memory errors.

Version 2.7.0, released 2024-08-01

  Bugfixes:
  - Don't push down LIMIT without an ORDER BY clause.
    This can lead to wrong results in some cases.
    Report by "fbattke".
  - Fix support for query parameters of type "uuid".
    This led to errors like
       error executing query: OCINumberFromText failed to convert parameter
       OCI-22062: invalid input string [8feee298-7ce5-4761-9487-34cab831fead]
    Report by "victorras".
  - Fix a memory leak in statements that return LOBs.
    The memory for LOB locators didn't get released before the end of the
    transaction, so running many statements in a single transaction could cause
    out-of-memory errors and server crashes.
    Report by "JosefMachytkaNetApp".
  - Fix building on Windows with PostgreSQL versions older than v15.
    This used to report "unresolved external symbol XactReadOnly".
    Report by "w0pr".
  - Fix crash or empty result when reading larger CLOBs.
    Report by Rainer Hartwig and Erik van der Vlist.
  - Bind empty string parameters as NULL values.
    Failure to do that led to the error
      ORA-01459: invalid length for variable character string
    during the attempt to INSERT empty strings in a foreign table.
    Report by Adrian Boangiu.

  Enhancements:
  - Speed up IMPORT FOREIGN SCHEMA ... LIMIT TO (...) by filtering out tables
    whose name don't match on the Oracle side.